--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <article id="article1"> <!-- The new article tag. The id is supplied so it can be scrolled into view. -->
 <div class="line"></div>
 
-
+<a href="Bargraph.html">BAR GRAPH WANTED</a>
 
 </div>
 </article>
