--- a/Bar 2001-2013.html
+++ b/Bar 2001-2013.html
@@ -2,7 +2,7 @@
 <head>
 <title>Crime</title>
   <script src="js/jquery-1.11.2.min.js"></script>
-     <script  type="text/javascript" src="js/d3.min.js"></script>
+     <script  type="text/javascript" src="d3.min.js"></script>
 
      <link rel="stylesheet" href="css/main.css">
      
