--- a/Bargraph.html
+++ b/Bargraph.html
@@ -10,6 +10,7 @@
 
 
 <body style="background-color:Cornsilk">
+  <a href="index.html">HOME PAGE</a>
  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
  <script src="js/crimestest.js"></script>
     <!--Place all DOM elements here -->
